# sparv-pipeline-testing

./: .bumpversion.toml  .pre-commit-config.yaml  Makefile  README.md  mypy.ini  pyproject.toml  ruff.toml
.github/workflows/: release.bak.yml  release.yml  scheduled.yml  test.yml
src/sparv_pipeline_testing/: __init__.py  annotations.py  outputs.py
src/sparv_testing/: __init__.py  annotations.py  outputs.py
tests/: test_annotations.py
