[project]
name = "sparv-pipeline-testing"
version = "0.1.2"
description = "Testing utilities for sparv-pipeline."
authors = [{ name = "Språkbanken Text", email = "sb-info@svenska.gu.se" }]
dependencies = ["sparv-pipeline >=5.2.0"]
requires-python = ">=3.8.1,<3.12"
readme = "README.md"
license = { text = "MIT" }

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "ruff>=0.4.6",
    "mypy>=1.10.0",
    "bump-my-version>=0.21.1",
]
