[project]
name = "sparv-pipeline-testing"
version = "0.1.7"
description = "Testing utilities for sparv-pipeline."
readme = "README.md"
authors = [
    { name = "Språkbanken Text", email = "sb-info@svenska.gu.se" },
    { name = "Kristoffer Andersson", email = "kristoffer.andersson@gu.se" },
]
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "sparv-pipeline>=5.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "bump-my-version>=0.28.0",
    "mypy>=1.13.0",
    "pytest-cov>=5.0.0",
    "pytest>=8.3.3",
    "ruff>=0.7.1",
]
